--- a/RealmModelGenerator/TitleCell.xib
+++ b/RealmModelGenerator/TitleCell.xib
@@ -18,9 +18,9 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ApS-rj-fAc">
-                    <rect key="frame" x="32" y="9" width="219" height="14"/>
+                    <rect key="frame" x="32" y="8" width="219" height="17"/>
                     <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" title="Title" id="ieK-RM-G6c">
-                        <font key="font" metaFont="smallSystem"/>
+                        <font key="font" size="11" name="Menlo-Regular"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
@@ -29,7 +29,7 @@
                     </connections>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="BzI-NG-lrh">
-                    <rect key="frame" x="8" y="8" width="18" height="18"/>
+                    <rect key="frame" x="8" y="7" width="18" height="18"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="18" id="eL4-Qh-HOE"/>
                         <constraint firstAttribute="width" constant="18" id="shO-2l-2lL"/>
@@ -51,7 +51,7 @@
             </subviews>
             <constraints>
                 <constraint firstItem="ApS-rj-fAc" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" id="7w0-FB-lsf"/>
-                <constraint firstItem="BzI-NG-lrh" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" constant="-1" id="Nec-CO-4ZY"/>
+                <constraint firstItem="BzI-NG-lrh" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" id="Nec-CO-4ZY"/>
                 <constraint firstItem="BzI-NG-lrh" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="8" id="fgK-63-iOw"/>
                 <constraint firstAttribute="trailing" secondItem="ApS-rj-fAc" secondAttribute="trailing" constant="8" id="key-ah-ZIX"/>
                 <constraint firstItem="ApS-rj-fAc" firstAttribute="leading" secondItem="BzI-NG-lrh" secondAttribute="trailing" constant="8" id="pMS-ev-j8K"/>
