--- a/RealmModelGenerator/AttributeDetailView.xib
+++ b/RealmModelGenerator/AttributeDetailView.xib
@@ -7,6 +7,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="AttributeDetailView" customModule="RealmModelGenerator" customModuleProvider="target">
             <connections>
+                <outlet property="attributeTypePopUpButton" destination="OgQ-sP-c3K" id="wTB-4Z-Wzj"/>
                 <outlet property="nameTextField" destination="nt8-h9-QDa" id="q0Z-lF-Igx"/>
             </connections>
         </customObject>
@@ -106,7 +107,7 @@
                     </buttonCell>
                 </button>
                 <box verticalHuggingPriority="750" fixedFrame="YES" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="b5o-4X-7HO">
-                    <rect key="frame" x="8" y="424" width="187" height="5"/>
+                    <rect key="frame" x="8" y="424" width="187" height="4"/>
                     <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                     <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <font key="titleFont" metaFont="system"/>
