--- a/RealmModelGenerator/PopUpCell.xib
+++ b/RealmModelGenerator/PopUpCell.xib
@@ -13,17 +13,17 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="287" height="34"/>
+            <rect key="frame" x="0.0" y="0.0" width="240" height="34"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <popUpButton fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IBk-w0-V7W">
-                    <rect key="frame" x="-2" y="4" width="286" height="26"/>
-                    <popUpButtonCell key="cell" type="check" bezelStyle="regularSquare" imagePosition="left" alignment="left" lineBreakMode="truncatingTail" allowsMixedState="YES" inset="2" id="2Nf-Wh-0xn">
+                    <rect key="frame" x="-2" y="4" width="244" height="26"/>
+                    <popUpButtonCell key="cell" type="check" title="Item 1" bezelStyle="regularSquare" imagePosition="left" alignment="left" lineBreakMode="truncatingTail" state="on" allowsMixedState="YES" inset="2" selectedItem="fdD-mS-1KG" id="2Nf-Wh-0xn">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="menu"/>
                         <menu key="menu" id="mPg-Jx-A7p">
                             <items>
-                                <menuItem title="Item 1" id="fdD-mS-1KG"/>
+                                <menuItem title="Item 1" state="on" id="fdD-mS-1KG"/>
                                 <menuItem title="Item 2" id="9eh-4V-VfY"/>
                                 <menuItem title="Item 3" id="6YS-Sl-Dyu"/>
                             </items>
@@ -34,7 +34,7 @@
                     </popUpButtonCell>
                 </popUpButton>
             </subviews>
-            <point key="canvasLocation" x="180.5" y="255"/>
+            <point key="canvasLocation" x="157" y="255"/>
         </customView>
     </objects>
 </document>
