--- a/RealmModelGenerator/AttributeDetailView.xib
+++ b/RealmModelGenerator/AttributeDetailView.xib
@@ -8,13 +8,19 @@
         <customObject id="-2" userLabel="File's Owner" customClass="AttributeDetailView" customModule="RealmModelGenerator" customModuleProvider="target">
             <connections>
                 <outlet property="attributeTypePopUpButton" destination="OgQ-sP-c3K" id="wTB-4Z-Wzj"/>
+                <outlet property="defaultCheckBox" destination="isW-xR-GZI" id="ISQ-3G-MJk"/>
+                <outlet property="defaultValueTextField" destination="bw6-Pl-lQu" id="Nhs-t7-PUR"/>
+                <outlet property="ignoredCheckBox" destination="goE-ZA-b9j" id="gUH-7H-OON"/>
+                <outlet property="indexedCheckBox" destination="814-XZ-iyg" id="giW-IA-Kzc"/>
                 <outlet property="nameTextField" destination="nt8-h9-QDa" id="q0Z-lF-Igx"/>
+                <outlet property="primaryCheckBox" destination="l4p-Id-g72" id="mp4-UL-1wc"/>
+                <outlet property="requiredCheckBox" destination="iUY-5c-XAZ" id="Qdf-mz-oBp"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="200" height="540"/>
+            <rect key="frame" x="0.0" y="0.0" width="250" height="540"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3xQ-hn-hqv">
@@ -45,8 +51,8 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nt8-h9-QDa">
-                    <rect key="frame" x="66" y="477" width="129" height="22"/>
+                <textField identifier="nameTextField" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nt8-h9-QDa">
+                    <rect key="frame" x="66" y="477" width="164" height="22"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="attribute" drawsBackground="YES" id="1H9-1b-oPp">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -56,16 +62,19 @@
                         <outlet property="delegate" destination="-2" id="QdD-em-lR5"/>
                     </connections>
                 </textField>
-                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bw6-Pl-lQu">
-                    <rect key="frame" x="63" y="345" width="65" height="22"/>
+                <textField identifier="defaultTextField" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bw6-Pl-lQu">
+                    <rect key="frame" x="63" y="345" width="80" height="22"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="1Zx-yn-zca">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
+                    <connections>
+                        <outlet property="delegate" destination="-2" id="y62-Pj-1ri"/>
+                    </connections>
                 </textField>
                 <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OgQ-sP-c3K">
-                    <rect key="frame" x="61" y="369" width="139" height="26"/>
+                    <rect key="frame" x="61" y="369" width="172" height="26"/>
                     <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="Xqi-YE-djg">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="menu"/>
@@ -77,37 +86,52 @@
                             </items>
                         </menu>
                     </popUpButtonCell>
+                    <connections>
+                        <action selector="attributeTypeChanged:" target="-2" id="L6u-9i-5cX"/>
+                    </connections>
                 </popUpButton>
-                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="goE-ZA-b9j">
+                <button identifier="ignoredCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="goE-ZA-b9j">
                     <rect key="frame" x="64" y="453" width="63" height="18"/>
                     <buttonCell key="cell" type="check" title="Ignored" bezelStyle="regularSquare" imagePosition="left" inset="2" id="aY5-zn-g1Q">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="smallSystem"/>
                     </buttonCell>
+                    <connections>
+                        <action selector="checkBoxStateChanged:" target="-2" id="hLI-Zv-G85"/>
+                    </connections>
                 </button>
-                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l4p-Id-g72">
-                    <rect key="frame" x="64" y="433" width="84" height="18"/>
-                    <buttonCell key="cell" type="check" title="Primary key" bezelStyle="regularSquare" imagePosition="left" inset="2" id="F2B-UM-daP">
+                <button identifier="primaryCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l4p-Id-g72">
+                    <rect key="frame" x="64" y="433" width="63" height="18"/>
+                    <buttonCell key="cell" type="check" title="Primary" bezelStyle="regularSquare" imagePosition="left" inset="2" id="F2B-UM-daP">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="smallSystem"/>
                     </buttonCell>
+                    <connections>
+                        <action selector="checkBoxStateChanged:" target="-2" id="D6V-ec-vwU"/>
+                    </connections>
                 </button>
-                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="814-XZ-iyg">
-                    <rect key="frame" x="131" y="453" width="65" height="18"/>
+                <button identifier="requiredCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iUY-5c-XAZ">
+                    <rect key="frame" x="151" y="433" width="69" height="18"/>
+                    <buttonCell key="cell" type="check" title="Required" bezelStyle="regularSquare" imagePosition="left" inset="2" id="v3z-FY-GeD">
+                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                        <font key="font" metaFont="smallSystem"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="checkBoxStateChanged:" target="-2" id="dDS-yK-eqY"/>
+                    </connections>
+                </button>
+                <button identifier="indexedCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="814-XZ-iyg">
+                    <rect key="frame" x="151" y="453" width="65" height="18"/>
                     <buttonCell key="cell" type="check" title="Indexed" bezelStyle="regularSquare" imagePosition="left" inset="2" id="EdX-Tg-uWO">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="smallSystem"/>
                     </buttonCell>
-                </button>
-                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="isW-xR-GZI">
-                    <rect key="frame" x="130" y="347" width="66" height="18"/>
-                    <buttonCell key="cell" type="check" title="Default" bezelStyle="regularSquare" imagePosition="left" inset="2" id="sOY-03-iF9">
-                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                        <font key="font" metaFont="smallSystem"/>
-                    </buttonCell>
+                    <connections>
+                        <action selector="checkBoxStateChanged:" target="-2" id="86H-0f-ng5"/>
+                    </connections>
                 </button>
                 <box verticalHuggingPriority="750" fixedFrame="YES" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="b5o-4X-7HO">
-                    <rect key="frame" x="8" y="424" width="187" height="4"/>
+                    <rect key="frame" x="8" y="424" width="187" height="5"/>
                     <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                     <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <font key="titleFont" metaFont="system"/>
@@ -120,6 +144,16 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
+                <button identifier="defaultCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="isW-xR-GZI">
+                    <rect key="frame" x="152" y="347" width="66" height="18"/>
+                    <buttonCell key="cell" type="check" title="Default" bezelStyle="regularSquare" imagePosition="left" inset="2" id="sOY-03-iF9">
+                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                        <font key="font" metaFont="smallSystem"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="checkBoxStateChanged:" target="-2" id="VS3-Bk-bT1"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="3xQ-hn-hqv" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="8" id="Rab-ZS-ebK"/>
