--- a/RealmModelGenerator/AttributeDetailView.xib
+++ b/RealmModelGenerator/AttributeDetailView.xib
@@ -24,35 +24,27 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3xQ-hn-hqv">
-                    <rect key="frame" x="6" y="514" width="58" height="17"/>
+                    <rect key="frame" x="6" y="514" width="75" height="17"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="54" id="6nx-Nv-Per"/>
+                        <constraint firstAttribute="width" constant="71" id="6nx-Nv-Per"/>
                         <constraint firstAttribute="height" constant="17" id="Od3-60-kMN"/>
                     </constraints>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Attribute" id="DvD-ba-5VI">
-                        <font key="font" metaFont="system" size="14"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9lP-TW-riS">
-                    <rect key="frame" x="3" y="454" width="59" height="17"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Properties" id="HY9-hp-zH5">
-                        <font key="font" metaFont="smallSystem"/>
+                        <font key="font" size="13" name="Menlo-Regular"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2td-2N-DxQ">
-                    <rect key="frame" x="9" y="401" width="91" height="17"/>
+                    <rect key="frame" x="9" y="401" width="97" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Attribute Type" id="SjL-5v-igd">
-                        <font key="font" metaFont="smallSystem"/>
+                        <font key="font" size="11" name="Menlo-Regular"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
                 <textField identifier="nameTextField" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nt8-h9-QDa">
-                    <rect key="frame" x="66" y="477" width="164" height="22"/>
+                    <rect key="frame" x="80" y="477" width="164" height="22"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="attribute" drawsBackground="YES" id="1H9-1b-oPp">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -63,9 +55,9 @@
                     </connections>
                 </textField>
                 <textField identifier="defaultTextField" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bw6-Pl-lQu">
-                    <rect key="frame" x="63" y="345" width="80" height="22"/>
+                    <rect key="frame" x="80" y="345" width="86" height="22"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="1Zx-yn-zca">
-                        <font key="font" metaFont="smallSystem"/>
+                        <font key="font" size="11" name="Menlo-Regular"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
@@ -74,10 +66,10 @@
                     </connections>
                 </textField>
                 <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OgQ-sP-c3K">
-                    <rect key="frame" x="61" y="369" width="172" height="26"/>
+                    <rect key="frame" x="78" y="369" width="169" height="26"/>
                     <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="Xqi-YE-djg">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="menu"/>
+                        <font key="font" size="11" name=".AppleSystemUIFont"/>
                         <menu key="menu" id="WfM-cG-Ro3">
                             <items>
                                 <menuItem title="Item 1" id="Nhs-VF-bGu"/>
@@ -91,43 +83,53 @@
                     </connections>
                 </popUpButton>
                 <button identifier="ignoredCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="goE-ZA-b9j">
-                    <rect key="frame" x="64" y="453" width="63" height="18"/>
+                    <rect key="frame" x="78" y="452" width="75" height="18"/>
                     <buttonCell key="cell" type="check" title="Ignored" bezelStyle="regularSquare" imagePosition="left" inset="2" id="aY5-zn-g1Q">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                        <font key="font" metaFont="smallSystem"/>
+                        <font key="font" size="11" name="Menlo-Regular"/>
                     </buttonCell>
                     <connections>
                         <action selector="checkBoxStateChanged:" target="-2" id="hLI-Zv-G85"/>
                     </connections>
                 </button>
                 <button identifier="primaryCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l4p-Id-g72">
-                    <rect key="frame" x="64" y="433" width="63" height="18"/>
+                    <rect key="frame" x="78" y="433" width="75" height="18"/>
                     <buttonCell key="cell" type="check" title="Primary" bezelStyle="regularSquare" imagePosition="left" inset="2" id="F2B-UM-daP">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                        <font key="font" metaFont="smallSystem"/>
+                        <font key="font" size="11" name="Menlo-Regular"/>
                     </buttonCell>
                     <connections>
                         <action selector="checkBoxStateChanged:" target="-2" id="D6V-ec-vwU"/>
                     </connections>
                 </button>
                 <button identifier="requiredCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iUY-5c-XAZ">
-                    <rect key="frame" x="151" y="433" width="69" height="18"/>
+                    <rect key="frame" x="166" y="433" width="75" height="18"/>
                     <buttonCell key="cell" type="check" title="Required" bezelStyle="regularSquare" imagePosition="left" inset="2" id="v3z-FY-GeD">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                        <font key="font" metaFont="smallSystem"/>
+                        <font key="font" size="11" name="Menlo-Regular"/>
                     </buttonCell>
                     <connections>
                         <action selector="checkBoxStateChanged:" target="-2" id="dDS-yK-eqY"/>
                     </connections>
                 </button>
                 <button identifier="indexedCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="814-XZ-iyg">
-                    <rect key="frame" x="151" y="453" width="65" height="18"/>
+                    <rect key="frame" x="166" y="452" width="69" height="18"/>
                     <buttonCell key="cell" type="check" title="Indexed" bezelStyle="regularSquare" imagePosition="left" inset="2" id="EdX-Tg-uWO">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                        <font key="font" metaFont="smallSystem"/>
+                        <font key="font" size="11" name="Menlo-Regular"/>
                     </buttonCell>
                     <connections>
                         <action selector="checkBoxStateChanged:" target="-2" id="86H-0f-ng5"/>
+                    </connections>
+                </button>
+                <button identifier="defaultCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="isW-xR-GZI">
+                    <rect key="frame" x="166" y="347" width="74" height="18"/>
+                    <buttonCell key="cell" type="check" title="Default" bezelStyle="regularSquare" imagePosition="left" inset="2" id="sOY-03-iF9">
+                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                        <font key="font" size="11" name="Menlo-Regular"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="checkBoxStateChanged:" target="-2" id="VS3-Bk-bT1"/>
                     </connections>
                 </button>
                 <box verticalHuggingPriority="750" fixedFrame="YES" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="b5o-4X-7HO">
@@ -137,23 +139,21 @@
                     <font key="titleFont" metaFont="system"/>
                 </box>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lfg-Ma-VJe">
-                    <rect key="frame" x="26" y="480" width="36" height="17"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Name" id="Ohs-Eo-pV9">
-                        <font key="font" metaFont="smallSystem"/>
+                    <rect key="frame" x="38" y="480" width="36" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Name" id="Ohs-Eo-pV9">
+                        <font key="font" size="11" name="Menlo-Regular"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <button identifier="defaultCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="isW-xR-GZI">
-                    <rect key="frame" x="152" y="347" width="66" height="18"/>
-                    <buttonCell key="cell" type="check" title="Default" bezelStyle="regularSquare" imagePosition="left" inset="2" id="sOY-03-iF9">
-                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                        <font key="font" metaFont="smallSystem"/>
-                    </buttonCell>
-                    <connections>
-                        <action selector="checkBoxStateChanged:" target="-2" id="VS3-Bk-bT1"/>
-                    </connections>
-                </button>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9lP-TW-riS">
+                    <rect key="frame" x="3" y="454" width="71" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Properties" id="HY9-hp-zH5">
+                        <font key="font" size="11" name="Menlo-Regular"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
             </subviews>
             <constraints>
                 <constraint firstItem="3xQ-hn-hqv" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="8" id="Rab-ZS-ebK"/>
